--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lostgift",
   "version": "1.0.0",
   "description": "",
-  "main": "src/game.js",
+  "main": "src/game.ts",
   "type": "module",
   "scripts": {
     "start": "webpack serve --mode development",
@@ -18,7 +18,10 @@
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
