--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "moduleResolution": "node",
+        "typeRoots": ["./node_modules/@types", "./custom.d.ts", "./phaser.d.ts"],
         "target": "ES2020",
         "useDefineForClassFields": true,
         "module": "ESNext",
@@ -9,19 +11,11 @@
             "DOM",
             "DOM.Iterable"
         ],
-        "skipLibCheck": true,
-        "moduleResolution": "bundler",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "strict": true,
-        "strictPropertyInitialization": false,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
     },
-    "include": [
-        "src"
+    "types": [
+      "phaser"
     ],
+    "include": ["src/**/*"],
     "exclude": [
         "node_modules",
         "**/*.spec.ts"
